# spyder-watchlist

./: .flake8  CHANGELOG.md  LICENSE  README.md  pyproject.toml
spyder_watchlist/: __init__.py  plugin.py
spyder_watchlist/locale/: spyder_watchlist.pot
spyder_watchlist/locale/de/LC_MESSAGES/: spyder_watchlist.mo  spyder_watchlist.po
spyder_watchlist/widgets/: kernel_backend.py  main_widget.py  watchlist.py
